--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,25 @@
+#file-list {
+    display: flex;
+    margin-left: 3%;
+    flex-direction: column;
+    align-items: start;
+    list-style-type: none;
+    padding: 0;
+    row-gap: 3px;
+}
+
+#file-list li:active {
+    cursor: grabbing;
+}
+
+#file-list li {
+    cursor: grab;
+    border: 1.5px solid #00000022;
+    border-radius: 15px;
+    padding: 4px;
+    background: rgb(112, 218, 186);
+}
+
 .asciiart {
     font-family:monospace;
     line-height: 1;
@@ -72,6 +94,18 @@ nav a:hover {
 /* BUTTONS AND TOGGLES */
 
 button {
+    background-color: lightgray;
+    border: 1.5px solid #00000022;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 20px;
+    padding: 7px 15px 7px 15px;
+}
+
+.buttonlike {
     background-color: lightgray;
     border: 1.5px solid #00000022;
     border-radius: 15px;
